<resources>
    <string name="app_name">WeatherAppSofaScore</string>
    <string name="package_name" translatable="false">com.renato.weatherapp</string>

    <string name="search_fragment_label">Search</string>
    <string name="myCities_fragment_label">My cities</string>

    <string name="title_activity_city_detail">CityDetailActivity</string>

    <string name="passing_data" translatable="false">city</string>

    <string name="minMax">MIN / MAX</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="pressure">PRESSURE</string>
    <string name="visibility">VISIBILITY</string>
    <string name="accuracy">ACCURACY</string>

    <!--ABOUT ACTIVITY -->
    <string name="aboutTitle">About</string>
    <string name="sofaScoreTitle">SofaScore Academy</string>
    <string name="classTitle">Class 2023</string>
    <string name="appNameTitle">App Name</string>
    <string name="appNameValue">Weather App</string>
    <string name="apiCreditTitle">API Credit</string>
    <string name="apiCreditValue">Weather API</string>
    <string name="developerTitle">Developer</string>
    <string name="developerValue">Renato Rak</string>

    <!--SETTINGS FRAGMENT-->
    <string name="settingsTitle">Settings</string>
    <string name="languageSpinnerHint">Language</string>
    <string name="citySpinnerHint">City</string>
    <string name="chooseTypeUnit">Choose type of unit</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="large_text">This app was made on SofaScore Android Academy 2023 in Zagreb.</string>
    <string name="moreInfo">More Info</string>
    <string name="clearMyCitiesList">CLEAR MY CITIES LIST</string>
    <string name="clearRecentSearchList">CLEAR RECENT SEARCH LIST</string>
    <string name="croatian">Croatian</string>
    <string name="english">English</string>
    <string name="clear_recent_title">Clear recent search list?</string>
    <string name="clear_recent_desc">If you clear your recent search list, your home screen will be empty.</string>
    <string name="clear_cap">CLEAR</string>
    <string name="cancel_cap">CANCEL</string>
    <string name="clear_recent_snackbar">Recent search list is clear.</string>
    <string name="set_time">CHANGE</string>
    <string name="select_time">Select time</string>
    <string name="notifications">Notifications</string>
    <string name="notificationsHour" translatable="false">NotificationsHour</string>
    <string name="notificationsMinute" translatable="false">NotificationsMinute</string>
    <string name="notifications_desc">Get forecast at:</string>

    <!--MY CITITES FRAGMENT-->
    <string name="myCitiesTitle">My Cities</string>
    <string name="calendar_item">Calendar Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="done_item">Done Item</string>
    <string name="lastUpdated">Last updated: %1$s</string>
    <string name="notUpdated">Not yet updated!</string>
    <string name="timeText" translatable="false">%1$s %2$s</string>
    <string name="errorRefreshing">Unable to refresh latest forecast.</string>

    <!-- SEARCH FRAGMENT-->
    <string name="search_bar_hint">Search Cities</string>
    <string name="error_title">No internet connection</string>
    <string name="error_message">Please connect to the internet to continue.</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="httpError">Oops! No forecast for you now, try again later!</string>
    <string name="recents">Recent</string>
    <string name="distance_km">Distance: %1$d km</string>
    <string name="distance_mil">Distance: %1$d mil</string>

    <!--RECENTS FRAGMENT-->
    <string name="dms" translatable="false">%1$s, %2$s</string>

    <!-- CITY DETAIL ACTIVITY-->
    <string name="favourite_item">Favourite Item</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="view_more">VIEW MORE</string>
    <string name="next_days">Next 7 days</string>
    <string name="today">Today</string>
    <string name="windMetricValue" translatable="false">%1$d km/h %2$s</string>
    <string name="windImperialValue" translatable="false">%1$d mph %2$s</string>
    <string name="windDirectionValue" translatable="false">(%1$s/%2$s)</string>
    <string name="temperatureMetricMinMax" translatable="false">%1$s°C/%2$s°C</string>
    <string name="temperatureImperialMinMax" translatable="false">%1$s°F/%2$s°F</string>
    <string name="temperatureMetricValue" translatable="false">%1$d°C</string>
    <string name="temperatureImperialValue" translatable="false">%1$d°F</string>
    <string name="visibilityMetricValue" translatable="false">%1$d km</string>
    <string name="visibilityImperialValue" translatable="false">%1$d mil</string>
    <string name="pressureMetricValue" translatable="false">%1$d hPa</string>
    <string name="pressureImperialValue" translatable="false">%1$d psi</string>
    <string name="humidityValue" translatable="false">%1$d%%</string>
    <string name="accuracyValue" translatable="false">99%</string>
    <string name="loading">Loading…</string>
    <string name="iconUrl" translatable="false">https:%1$s</string>

    <string name="favouritesLastUpdated" translatable="false">FavouritesLastUpdated</string>
    <string name="recentsLastUpdated" translatable="false">RecentsLastUpdated</string>
    <string name="myCity" translatable="false">MyCity</string>

    <!-- OTHER -->
    <string name="channel_name" translatable="false">Forecast notification</string>
    <string name="channel_description" translatable="false">Your daily forecast</string>
    <string name="notavailable">Not available</string>
    <string name="WORKER_TAG" translatable="false">WORKER TAG</string>
    <string name="reminder_notification_work" translatable="false">Work</string>
    <string name="notificationsDisabled">Permission denied, enable notifications in settings.</string>

    <string name="apiKey" translatable="false">730fb62a427b4beea97211516232104</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

</resources>